--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
-langchain-core==0.3.41
-langchain-openai==0.3.7
-langchain-together==0.3.0
-python-dotenv==1.0.0
-tavily-python==0.3.1
-yfinance==0.2.54
-pandas==2.2.3
-matplotlib==3.7.1
-plotly==5.22.0
-googlenewsdecoder==0.1.7
+langchain-core
+langchain-openai
+langchain-together
+python-dotenv
+tavily-python
+yfinance
+pandas
+matplotlib
+plotly
+googlenewsdecoder
+langgraph
+mcp
+aucodb
+neo4j
+pyvis
+alpha_vantage
+redis
