--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ aucodb = {extras = ["graph"], version = "0.1.7" }
 mcp = "1.9.0"
 mlflow = "3.1.0"
 mlflow-skinny = "3.1.0"
+alpha_vantage="^3.0.0" 
+redis="^6.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.1"
@@ -40,6 +42,8 @@ plotly = "5.22.0"
 yfinance = "0.2.54"
 tavily-python = { version = "^0.3.1", optional = true }
 googlenewsdecoder = "0.1.7"
+alpha_vantage="^3.0.0" 
+redis="^6.2.0"
 
 [tool.black]
 line-length = 88
