--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "vinagent"
-version = "0.0.6"
+version = "0.0.6.post2"
 description = "This is an AI Agent library"
 authors = ["phamdinhkhanh <phamdinhkhanh.tkt53.neu@gmail.com>"]
 readme = "README.md"
@@ -19,7 +19,7 @@ plotly = "5.22.0"
 yfinance = "0.2.54"
 tavily-python = { version = "^0.3.1", optional = true }
 googlenewsdecoder = "0.1.7"
-aucodb = {extras = ["graph"], version = "0.1.7" }
+aucodb = {extras = ["graph"], version = "0.1.8.post3" }
 mcp = "1.9.0"
 mlflow = "3.1.0"
 mlflow-skinny = "3.1.0"
