Add AI Guardrail

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -44,6 +44,7 @@ nav:
         - 6. Security: get_started/authen_layer.md
         - 7. Observability: get_started/observability.md
       - Run local ReactJS App: get_started/local_run.md
+    - AI Guardrail: get_started/ai_guardrail.md
     - Agent Development:
       - Workflow & Agent: get_started/workflow_and_agent.md
       - Agent RAG: get_started/agent_rag.md
@@ -64,7 +65,7 @@ nav:
       - Customer Care Multi-Agent: guides/customer_care.md
     - RAG:
       - Agent RAG: guides/agent_rag.md
-    
+  
   - Reference: 
     - Agent: reference/agent.md
     - Tool: reference/tool.md
