--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -6,5 +6,15 @@ jobs:
     lint:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v3
-            - uses: psf/black@25.9.0
+            - name: Checkout repository
+              uses: actions/checkout@v3
+
+            - name: Set up Python 3.11
+              uses: actions/setup-python@v5
+              with:
+                python-version: "3.11"
+
+            - name: Run Black
+              uses: psf/black@25.9.0
+              with:
+                options: "--check --diff"
