--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -44,7 +44,8 @@ nav:
         - 6. Security: get_started/authen_layer.md
         - 7. Observability: get_started/observability.md
       - Run local ReactJS App: get_started/local_run.md
-    - AI Guardrail: get_started/ai_guardrail.md
+    - AI Guardrail: 
+      - Secure AI with guardrail: get_started/ai_guardrail.md
     - Agent Development:
       - Workflow & Agent: get_started/workflow_and_agent.md
       - Agent RAG: get_started/agent_rag.md
